test_case/rust-lang_rust/3930_10173109.rs

pure fn call_first((x, y): (&fn(), &fn())) { 
    x(); //~ ERROR access to impure function prohibited in pure context
}
fn main() {}
